--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -35,6 +35,11 @@ services:
       - ENABLE_MESSAGE_RATING=true
       - DEFAULT_LOCALE=en
       - WEBUI_AUTH=false  # Disable auth for local testing
+      - ENABLE_OPENAI_API=true
+      - OPENAI_API_BASE_URL=https://api.openai.com/v1
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - ENABLE_LITELLM=true
+      - LITELLM_API_BASE_URL=http://litellm:4000/v1
     volumes:
       - ./data/openwebui:/app/backend/data
     depends_on:
