Fix MCP server integration - Convert to HTTP-based FastAPI server
- Created http_server.py with FastAPI implementation exposing 165+ tools

- Updated Dockerfile with FastAPI dependencies

- Added docker-compose.mcp-http.yml for HTTP deployment

- Created deployment scripts for Windows and Unix

- Added comprehensive test suite

- Updated LIVING_DOCUMENT.md to reflect 85-90% completion

- Bypassed MCPO stdio issues with direct HTTP integration

--- a/mcp-server/Dockerfile
+++ b/mcp-server/Dockerfile
@@ -14,7 +14,11 @@ RUN pip install --no-cache-dir \
     aiohttp \
     redis \
     asyncio \
-    urllib3
+    urllib3 \
+    fastapi \
+    uvicorn \
+    pydantic \
+    httpx
 
 # Copy application code
 COPY . /app
@@ -22,8 +26,8 @@ COPY . /app
 # Create workspace directory
 RUN mkdir -p /workspace
 
-# Expose port for MCP server
+# Expose port for HTTP server
 EXPOSE 8888
 
-# Run the MCP server
-CMD ["python", "-m", "main"]
+# Run the HTTP server
+CMD ["python", "-m", "http_server"]
